--- a/src/css/index.css
+++ b/src/css/index.css
@@ -49,7 +49,7 @@ a:hover {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  margin-top: 1.2em;
+  margin-top: 1em;
   margin-bottom: 0.5em;
   line-height: 1.25;
   font-weight: 600;
@@ -67,19 +67,25 @@ h2 {
 
 h3 {
   font-size: 1.3rem;
+  margin-top: 1.2em;
 }
 
 h4 {
   font-size: 1.1rem;
+  margin-top: 1em;
 }
 
 h5 {
   font-size: 1rem;
-  color: var(--clr-surface-a50);
+  margin-top: .9em;
+  font-weight: 500;
+  color: var(--clr-surface-a60);
 }
 
 h6 {
   font-size: 0.9rem;
+  margin-top: .8em;
+  font-weight: 500;
   color: var(--clr-surface-a50);
 }
 
