add homepage and new walls/tiles

--- a/src/level-editor/components/LevelEditor/LevelEditor.module.css
+++ b/src/level-editor/components/LevelEditor/LevelEditor.module.css
@@ -10,6 +10,8 @@
   padding: 1rem;
 
   --tile-color-grass: lightgreen;
+  --tile-color-oldgrass: darkorange;
+  --tile-color-redgrass: tomato;
   --tile-color-water: lightblue;
 
   --wall-color-stone: gray;
