--- a/src/pages/home/components/TaskCard.module.css
+++ b/src/pages/home/components/TaskCard.module.css
@@ -1,9 +1,9 @@
 :root {
-  --background-overlay-color: rgba(0, 0, 0, 0.2);
+  --background-overlay-color: rgba(0, 0, 0, 0.25);
 }
 
 :root[theme="dark"] {
-  --background-overlay-color: rgba(0, 0, 0, 0.35);
+  --background-overlay-color: rgba(0, 0, 0, 0.4);
 }
 
 .taskCard {
@@ -31,7 +31,6 @@
   position: absolute;
   inset: 0;
   background: var(--background-overlay-color);
-  backdrop-filter: blur(2px);
   z-index: 0;
 }
 
@@ -54,5 +53,5 @@
 }
 
 .title, .description {
-  text-shadow: 0 2px 32px rgba(0, 0, 0, 0.6);
+  text-shadow: 0 2px 32px rgba(0, 0, 0, .8);
 }
