--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -108,6 +108,13 @@
   color: var(--text-color);
 }
 
+.variant-highlighted {
+  --background-color: var(--clr-surface-a10);
+  --background-hover: var(--clr-surface-a20);
+  color: var(--text-color);
+  box-shadow: inset 0 -2px 0 var(--clr-primary-a0) !important;
+}
+
 /* Shapes */
 .shape-default {
   height: var(--height);
