--- a/src/level-editor/components/LevelEditor/Wall/Wall.module.css
+++ b/src/level-editor/components/LevelEditor/Wall/Wall.module.css
@@ -7,6 +7,7 @@
   display: inline-block;
   padding: 0;
   --background-color: var(--clr-surface-a10);
+  background-color: var(--background-color);
 }
 
 .wallHorizontal {
@@ -16,6 +17,6 @@
 }
 
 .filledWall {
-  background-color: var(--clr-surface-a50);
+  --background-color: var(--clr-surface-a50);
 }
 
