--- a/src/components/floating/Modal/Modal.module.css
+++ b/src/components/floating/Modal/Modal.module.css
@@ -25,7 +25,7 @@
   padding: 1rem;
   border-radius: 1rem;
 
-  box-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.5);
+  box-shadow: 0 0 75px rgba(0, 0, 0, 0.6);
   min-width: 400px;
   position: relative;
   overflow: hidden;
