--- a/src/level-editor/components/LevelEditor/LevelEditor.module.css
+++ b/src/level-editor/components/LevelEditor/LevelEditor.module.css
@@ -4,7 +4,7 @@
 
   display: flex;
   flex-direction: row;
-  height: calc(100vh - var(--navbar-height) - 2rem);
+  height: calc(100vh - var(--navbar-height));
   align-items: flex-start;
   justify-content: flex-start;
   padding: 1rem;
