update modal component

--- a/src/shared/components/floating/Modal/Modal.module.css
+++ b/src/shared/components/floating/Modal/Modal.module.css
@@ -38,6 +38,10 @@
   background: rgba(0, 0, 0, 0.4);
 }
 
+.overlayWrapper.nested {
+  background: transparent;
+}
+
 .overlay {
   display: grid;
   place-items: center;
