--- a/src/features/editor/components/CodeEditor/CodeEditor.module.css
+++ b/src/features/editor/components/CodeEditor/CodeEditor.module.css
@@ -35,10 +35,13 @@
   inset: 0;
   width: 100%;
   height: 5rem;
-  backdrop-filter: blur(8px);
-  mask: linear-gradient(to bottom, black 0%, transparent 100%);
   pointer-events: none;
   z-index: -1;
+}
+
+.blurEffects .cornerGroup::before {
+  backdrop-filter: blur(8px);
+  mask: linear-gradient(to bottom, black 0%, transparent 100%);
 }
 
 .bottomCornerGroup {
@@ -52,8 +55,11 @@
   inset: 0;
   width: 100%;
   height: 100%;
-  backdrop-filter: blur(8px);
-  mask: linear-gradient(to top, black 0%, transparent 100%);
   pointer-events: none;
   z-index: -1;
+}
+
+.blurEffects .bottomCornerGroup::before {
+  backdrop-filter: blur(8px);
+  mask: linear-gradient(to top, black 0%, transparent 100%);
 }
