--- a/src/shared/components/floating/Modal/Modal.module.css
+++ b/src/shared/components/floating/Modal/Modal.module.css
@@ -61,7 +61,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-bottom: 1.5rem;
+  margin-bottom: .5rem;
 }
 
 .content {
