--- a/src/features/editor/components/CodeEditor/CodeEditor.module.css
+++ b/src/features/editor/components/CodeEditor/CodeEditor.module.css
@@ -21,8 +21,7 @@
   overflow: hidden;
 }
 
-.cornerGroup,
-.bottomCornerGroup {
+.cornerGroup {
   position: absolute;
   width: 100%;
   gap: .5rem;
@@ -37,29 +36,6 @@
   height: 5rem;
   pointer-events: none;
   z-index: -1;
-}
-
-.blurEffects .cornerGroup::before {
   backdrop-filter: blur(8px);
   mask: linear-gradient(to bottom, black 0%, transparent 100%);
-}
-
-.bottomCornerGroup {
-  height: 5rem;
-  pointer-events: none;
-}
-
-.bottomCornerGroup::before {
-  content: "";
-  position: absolute;
-  inset: 0;
-  width: 100%;
-  height: 100%;
-  pointer-events: none;
-  z-index: -1;
-}
-
-.blurEffects .bottomCornerGroup::before {
-  backdrop-filter: blur(8px);
-  mask: linear-gradient(to top, black 0%, transparent 100%);
 }
