add task completion effect

--- a/src/features/editor/components/TaskCodeEditor/TaskSelector/TaskSelector.module.css
+++ b/src/features/editor/components/TaskCodeEditor/TaskSelector/TaskSelector.module.css
@@ -1,15 +1,4 @@
-.dayContainer {
-
-}
-
-.day {
-  padding: var(--padding);
-  font-weight: 700;
-  user-select: none;
-  -webkit-user-select: none;
-}
-
-.day:hover {
-  cursor: pointer;
-  background-color: var(--clr-surface-a7);
+.completed {
+  color: var(--clr-success-a10);
+  text-decoration: line-through;
 }
