--- a/src/features/level-editor/components/LevelEditor/LevelEditor.module.css
+++ b/src/features/level-editor/components/LevelEditor/LevelEditor.module.css
@@ -53,3 +53,13 @@
   overflow: auto;
   padding: 1rem;
 }
+
+.hidden {
+  display: none;
+  pointer-events: none;
+}
+
+.viewportContainer {
+  height: 100%;
+  width: 100%;
+}
