--- a/src/pages/HomePage/HomePage.module.css
+++ b/src/pages/HomePage/HomePage.module.css
@@ -3,3 +3,66 @@
   flex-direction: column;
   gap: 1rem;
 }
+
+.logoContainer {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  padding: 2rem;
+}
+
+.logo {
+  width: 300px;
+  image-rendering: pixelated;
+  user-select: none;
+  -webkit-user-select: none;
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1rem;
+}
+
+.card {
+  padding: 1rem;
+  background-color: var(--clr-surface-a5);
+  border-radius: 1rem;
+  display: flex;
+  flex-direction: column;
+
+  gap: .5rem;
+  width: 500px;
+  border: 1px solid var(--clr-surface-a10);
+}
+
+.highlighted {
+  /*outline: 2px solid var(--clr-primary-a0);*/
+}
+
+.cardTitle {
+  font-size: 1.4rem;
+  font-weight: 500;
+  color: var(--text-color-t90);
+  display: flex;
+  align-items: center;
+  gap: .5rem;
+}
+
+.cardDescription {
+  margin-bottom: 1rem;
+  color: var(--text-color-t80);
+}
+
+.separator {
+  height: 1px;
+  width: 400px;
+  background-color: var(--clr-surface-a20);
+}
+
+.cardBody {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
