add some mobile support

--- a/src/features/editor/components/Editor/Editor.module.css
+++ b/src/features/editor/components/Editor/Editor.module.css
@@ -10,6 +10,10 @@
   padding: 1rem;
 }
 
+.editorContainer.mobile {
+  overflow: auto;
+}
+
 .consolePanel {
   display: flex;
   flex-direction: column;
