more mobile support

--- a/src/features/editor/components/CodeEditorWithPanel/CodeEditorWithPanel.module.css
+++ b/src/features/editor/components/CodeEditorWithPanel/CodeEditorWithPanel.module.css
@@ -7,9 +7,15 @@
 
 .container.mobile {
   flex-direction: column;
+  display: block;
 }
 
 .editorContainer {
   width: 100%;
   height: 100%;
+}
+
+.mobile > .editorContainer {
+  min-height: 500px;
+  margin-bottom: 1rem;
 }
