add smaller logo for mobile on navbar

--- a/src/shared/components/NavBar/Logo/Logo.module.css
+++ b/src/shared/components/NavBar/Logo/Logo.module.css
@@ -5,3 +5,9 @@
   user-select: none;
   -webkit-user-select: none;
 }
+
+.logo.mobile {
+  height: 30px !important;
+  margin-top: 5px;
+  padding: 0;
+}
